@@ -2,11 +2,10 @@ package com.twitter.teruteru128.p2pquake;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class ListedDataPacket extends Packet {
 
-    private List<String> dataList;
+    private final List<String> dataList;
 
     public ListedDataPacket(int code, int hop, List<String> data) {
         super(code, hop);
@@ -19,11 +18,9 @@ public class ListedDataPacket extends Packet {
             return new NoDataPacket(code, hop).toString();
         }
         if (dataList.size() == 1) {
-            return new SingleDatumPacket(code, hop, dataList.get(0)).toString();
+            return new SingleDatumPacket(code, hop, dataList.getFirst()).toString();
         }
-        return new StringBuilder().append(super.code).append(' ')
-                .append(super.hop).append(' ')
-                .append(dataList.stream().collect(Collectors.joining(":"))).append("\r\n").toString();
+        return String.valueOf(super.code) + ' ' + super.hop + ' ' + String.join(":", dataList) + "\r\n";
     }
 
 }
